version/0.12/_sources/api/solver/_autosummary/settings/active.rst.txt
:orphan:

.. _active:

active
======

.. currentmodule:: ansys.fluent.core.solver.settings_231.active

.. autoclass:: active
    :show-inheritance:
    :undoc-members:
.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`report_files_child <report_files_child>`                            'child_object_type' of report_files.

:ref:`report_plots_child <report_plots_child>`                            'child_object_type' of report_plots.

:ref:`convergence_reports_child <convergence_reports_child>`       'child_object_type' of convergence_reports.

============================================================   ===============================================

