version/0.20/_sources/api/solver/_autosummary/settings/active.rst.txt
:orphan:

.. _active:

active
======

.. autoclass:: ansys.fluent.core.solver.settings_241.active.active
    :show-inheritance:

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`report_files_child <report_files_child>`                            'child_object_type' of report_files.

:ref:`report_plots_child <report_plots_child>`                            'child_object_type' of report_plots.

:ref:`convergence_reports_child <convergence_reports_child>`       'child_object_type' of convergence_reports.

:ref:`before_init_modification <before_init_modification>`                   'before_init_modification' child.

:ref:`original_settings <original_settings>`                                        'original_settings' child.

:ref:`modifications_child <modifications_child>`                         'child_object_type' of modifications.

:ref:`settings_child <settings_child>`                                        'child_object_type' of settings.

:ref:`settings_child <settings_child_1>`                                      'child_object_type' of settings.

:ref:`settings_child <settings_child_2>`                                      'child_object_type' of settings.

:ref:`settings_child <settings_child_3>`                                      'child_object_type' of settings.

============================================================   ===============================================

